# geoh5vista

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
assets/: test_file_LICENSE.md
examples/: load-project.py
geoh5vista/: __init__.py  blockmodel.py  curve.py  drillholes.py  points.py  surface.py  utilities.py  wrapper.py
src/geoh5vista/: __init__.py  blockmodel.py  curve.py  data.py  drillholes.py  geoimage.py  grid2d.py  group.py  octree.py  points.py  surface.py  utilities.py  wrapper.py
src/geoh5vista.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
